binal build ready

--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -2194,6 +2194,12 @@ body.mobile-nav-active #mobile-nav-toggle {
   padding: 120px 0;
 }
 
+.section-gap1 {
+	background-color: gray;
+  padding: 10px 0;
+}
+
+
 .section-title {
   padding-bottom: 30px;
 }
